# Metabarcoding

./: .gitignore  README.md
analysis/: LAUNCHING.md  run.sh  run_all_analyses.py  run_interpolated.sh  run_location.sh  submit_subanalysis.sh  variant_helpers.py  visualize_results.py
analysis/BarcodeBERT/: barcodebert.py  barcodebert_visualize.py  compare_results.py  embed_sequences.py  train.py  wrapper.py
analysis/CE_with_present_BIN_only/: latent_present_only_comparison.py  latent_present_only_visualize.py
analysis/ablation_study/: ablation_study.py  ablation_visualize.py  analyze_amplification.py  diagnose_final.py
analysis/baselines/: README.md  evaluate.py  models.py  preprocess.py  requirements.txt  run_baselines.py  visualize.py
analysis/data_curation/: README.md  __init__.py  criteria_profiles.json  data_curation_pipeline.py  run_data_curation.py  visualizations.py
analysis/dimensionality_increase/: README.md  README_gating_comparison.md  config.py  example_usage.py  latent_solver.py  mlp.py  model.py  test_imports.py  train.py
analysis/figures/: comparison_results.csv
analysis/interpolated_latent/: interpolated_latent.py
autoresearch/: .gitignore  README.md  prepare.py  program.md  pyproject.toml  submit.sh  train.py
data/: exploration.ipynb  fetch_bold_bin_sequences.py
src/: config.py  dataset.py  embed_location.py  gating_functions.py  latent_solver.py  loss.py  mlp.py  model.py  neighbor_graph.py  plot_lr_schedule.py  pytorch_latent_solver.py  train.py  utils.py  visualize_results.py  visualize_training.py
(+142 files in other folders)
